@@ -1,3 +1,10 @@
+2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/component/muxers/flv/flv.xml:
+	* flumotion/component/muxers/flv/wizard_gtk.py (added):
+	Add a check for the fluflvmuxer so it can be used from the conversion
+	Step (See pub:r8454)
+
 2010-01-21  Xavier Queralt Mateu <xqueralt@flumotion.com>
 
 	reviewed by: jribass
